unpackaged/main/default/objects/Benefit_Order_Allocation__c/Benefit_Order_Allocation__c.object-meta.xml
<CustomObject>
    <label>Order Allocation</label>
    <nameField>
        <displayFormat>BOA-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Order Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>