unpackaged/main/default/objects/Benefit_Order_Allocation__c/fields/Contractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Count__c</fullName>
    <label>Contractor Count</label>
    <summarizedField>Order_BOA_Relationship__c.Contractor_Count__c</summarizedField>
    <summaryFilterItems>
        <field>Order_BOA_Relationship__c.Order_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_BOA_Relationship__c.Benefit_Order_Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>