unpackaged/main/default/objects/Benefit_Order_Allocation__c/fields/Max_BO__c.field-meta.xml
<CustomField>
    <fullName>Max_BO__c</fullName>
    <label>Max BO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>