unpackaged/main/default/objects/Benefit_Order_Allocation__c/fields/Payroll_Transfer_FBOS_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Transfer_FBOS_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Transfer FBOS Forecast</label>
    <referenceTo>Payroll_Transfer_FBOS_Forecast__c</referenceTo>
    <relationshipName>Benefit_Order_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>