unpackaged/main/default/objects/Benefit_Order_Allocation__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <referenceTo>User_Role__c</referenceTo>
    <relationshipName>BO_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>