unpackaged/main/default/objects/Benefit_Order_Allocation__c/recordTypes/Advising.recordType-meta.xml
<RecordType>
    <fullName>Advising</fullName>
    <active>true</active>
    <label>Advising</label>
</RecordType>