unpackaged/main/default/objects/Benefit_Order_Allocation__c/recordTypes/Benefits.recordType-meta.xml
<RecordType>
    <fullName>Benefits</fullName>
    <active>true</active>
    <description>BOAs for Benefits</description>
    <label>Benefits</label>
</RecordType>