unpackaged/main/default/objects/Benefit_Order_Allocation__c/recordTypes/Payroll.recordType-meta.xml
<RecordType>
    <fullName>Payroll</fullName>
    <active>true</active>
    <description>BOas for Payroll</description>
    <label>Payroll</label>
</RecordType>